--- a/KSPUniverseRecenter/KSPUniverseRecenter.csproj
+++ b/KSPUniverseRecenter/KSPUniverseRecenter.csproj
@@ -11,6 +11,7 @@
     <DebugType>none</DebugType>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="HarmonyX" Version="2.9.0" />
     <PackageReference Include="OWML" Version="2.3.2" />
     <PackageReference Include="OuterWildsGameLibs" Version="1.1.12.168" />
   </ItemGroup>
